<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    tools:context="com.a16mb.damrod.quizwars.MainActivity">


<LinearLayout
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@color/primary"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:id="@+id/button_begin_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:text="@string/begin_quiz"
        android:enabled="false"

        android:textColor="@drawable/button_color"
        android:background="@color/primary_dark"/>

    <Button
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:id="@+id/button_check_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:text="@string/check_answers"
        android:enabled="false"

        android:textColor="@drawable/button_color"
        android:background="@color/primary_dark"/>


    <TextView
        android:id="@+id/player_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/icons"
        android:text="@string/questions_for" />

</LinearLayout>

    <ListView
        android:layout_below="@+id/menu_layout"
        android:id="@+id/questions_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </ListView>


</RelativeLayout>
